--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 'Un excelente blog'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 #baseurl: '/mundana-theme-jekyll'
-baseurl: '/mundana-theme-jekyll'
+baseurl: '/lfranz'
 url: 'https://lfrakie.github.io'
 disqus: 'demowebsite'
 email: 'wowthemesnet@gmail.com'
