ad note on README.md /gitu

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ name: 'LF DOCS'
 description: 'Un excelente blog'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-#baseurl: '/mundana-theme-jekyll'
-baseurl: '/jekyll-mundana-deploy'
+baseurl: '/mundana-theme-jekyll'
+#baseurl: '/jekyll-mundana-deploy'
 url: 'https://lfrakie.github.io'
 disqus: 'demowebsite'
 email: 'wowthemesnet@gmail.com'
